# argocd-diff-preview

./: .gitignore  .golangci.yml  404.html  AGENTS.md  CONTRIBUTING.md  CONVERSATION_CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile_AMD64  Dockerfile_ARM64  KNOWLEDGE.md  README.md  create-cluster.sh  devcontainer.make  example.yaml  external-cluster.sh  go.Dockerfile  go.mod  go.sum  index.html  makefile  mkdocs.yml  session-ses_4511.md
.devcontainer/: devcontainer.json
action/: action.yml
app-of-apps/: index.html
application-selection/: index.html
argocd-config/: argocd-cmd-params-cm.yaml  config.go  values-override.yaml  values-post.yaml  values-pre.yaml  values.yaml
assets/: appset-patching.af  argocon.af  carbon-config.json  images.af  logo.af  versions.css
cluster-generator/: index.html
cmd/: main.go  main_live_test.go  options.go  options_test.go
custom-argo-cd-installation/: index.html
custom-user/: makefile
demo/: index.html
design-philosophy/: index.html
docs/: app-of-apps.md  application-selection.md  article.md  cluster-generator.md  custom-argo-cd-installation.md  demo.md  design-philosophy.md  examples.md  existing-cluster.md  faq.md  filter-output.md  generated-applications.md  github-actions-workflow.md  gitlab-cicd.md  how-it-works.md  ignoring-lines.md  index.md  installation.md  multi-repo.md  options.md  output.md  rendering-methods.md  roadmap.md  self-hosted-and-existing-cluster.md  self-hosted-gh-runner.md  troubleshooting.md
examples/: random-app.yaml
existing-cluster/: index.html
experiment/: app-set.yaml
src/: diff.rs  (+14 more)
(+466 files in other folders)
