[package]
name = "argocd-diff-preview"
version = "0.0.29"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.42.0",features = ["full"]}
base64 = "0.22.1"
serde = "1.0.217"
serde_yaml = "0.9.33"
serde_json = "1.0.134"
walkdir = "2.5.0"
schemars = "0.8.21"
structopt = { version = "0.3" }
regex = "1.11.1"
log = "0.4.22"
env_logger = "0.11.6"
once_cell = "1.20.2"
rand = "0.8.5"