[package]
name = "argocd-diff-preview"
version = "0.0.35"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.43.0",features = ["full"]}
base64 = "0.22.1"
serde = "1.0.218"
serde_yaml = "0.9.33"
serde_json = "1.0.139"
walkdir = "2.5.0"
schemars = "0.8.22"
structopt = { version = "0.3" }
regex = "1.11.1"
log = "0.4.26"
env_logger = "0.11.6"
once_cell = "1.20.3"
rand = "0.9.0"